--- a/tutorial.html
+++ b/tutorial.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
-</head>
-<body>
-    
-</body>
+  <head>
+    <title>Respuesta ejercicio 5</title>
+  </head>
+ 
+  <body>
+    <h1>Venta de inmuebles</h1>
+ 
+    <img SRC="https://i.imgur.com/zMMpgKL.png" alt="Casa urbana" width="200px">
+    <h2>Casa urbana</br>
+    Precio:$200</br>
+    Telefono:1112223
+    </h2>
+    <img SRC="https://i.imgur.com/jGQQMA6.jpeg" alt="Casa rural" width="200px">
+    <h2>Casa rural</br>
+    Precio:$600</br>
+    Telefono:1112224
+    </h2>
+    <img SRC="https://i.imgur.com/a7NWZHq.jpeg" alt="Apartamento" width="200px">
+    <h2>Apartamento</br>
+    Precio:$170</br>
+    Telefono:1112225
+    </h2>
+  </body>
 </html>
